# zap-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  PODMAN.md  README.md  SECURITY.md  __init__.py  alerts.py  bandit-report.json  build.bat  build.sh  config.py  docker-compose.yml  docker-entrypoint.sh  env.example  er.name  hell -Command Compress-Archive -Path  -DestinationPath zap-mcp-server-v1.0.0.zip -Force  http_server.py  http_session.py  logging_setup.py  models.py  podman-compose.yml  pyproject.toml  requirements.txt  run_server.py  safety-report.json  server.py  start.bat  start.sh  utils.py  zap_control.py
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  docker.yml  release.yml  security.yml
mcp/: __init__.py  types.py
mcp/server/: __init__.py  models.py  stdio.py
scans/: __init__.py  active.py  ajax.py  complete.py  passive.py  spider.py
tests/: test_basic.py
zap_custom_mcp/: __init__.py  __main__.py  alerts.py  config.py  http_server.py  http_session.py  logging_setup.py  server.py  utils.py  zap_control.py
zap_custom_mcp/mcp/server/: __init__.py  models.py
zap_custom_mcp/scans/: active.py  ajax.py  complete.py  passive.py  spider.py
